resource/java compiler/srcFile/file17err.txt
file17.cpp: In function 'int main()':
file17.cpp:28:5: error: expected ';' before 'return'
     return 0;
     ^
